k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: spring-boot-employee-pod
spec:
  containers:
    - name: spring-boot-employee
      image: maninder40407/crud-kubernetes:latest
      ports:
      - containerPort: 9000
      # The pod template ends here
