k8s/2-bookmarker-api.yml
apiVersion: v1
kind: Service
metadata:
  name: bookmarker-api-svc
spec:
  type: NodePort
  selector:
    app: bookmarker-api-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30090
      name: app-port-mapping

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmarker-api-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmarker-api-pod
  template:
    metadata:
      labels:
        app: bookmarker-api-pod
    spec:
      containers:
        - image: maninder40407/bookmarker-api-jib
          name: bookmarker-api-jib
          ports:
            - containerPort: 8080
