k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-crud-service
spec:
  type: NodePort
  selector:
    app: spring-employee-deployment
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 80
      targetPort: 9000
      nodePort: 30090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-employee-deployment
  name: spring-employee-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-employee-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: spring-employee-deployment
    spec:
      containers:
      - image: maninder40407/crud-kubernetes:latest
        name: crud-kubernetes
        ports:
          - containerPort: 9000
